<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ProgressBar
            android:id="@+id/progressIndicator"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ellipseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="13dp"
            android:paddingTop="100dp"
            android:src="@drawable/ellipse"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/welcome_login"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:alpha="100" />

        <TextView
            android:id="@+id/welcome_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:alpha="0"
            android:contentDescription="@string/welcome_login"
            android:text="@string/welcome_login"
            android:textSize="25sp"
            android:theme="@style/customTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:alpha="100" />

        <TextView
            android:id="@+id/login_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:alpha="0"
            android:contentDescription="@string/login_info"
            android:text="@string/login_info"
            android:textSize="40sp"
            android:textStyle="bold"
            android:theme="@style/customTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_login"
            tools:alpha="100" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineTop"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.3"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideLineTop">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:alpha="0"
                android:contentDescription="@string/input_email"
                app:helperText=" "
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:alpha="100">

                <com.submission.soilink.view.customview.CustomEditTextView
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    app:errorEnabled="true"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:alpha="0"
                android:contentDescription="@string/input_password"
                app:endIconMode="password_toggle"
                app:endIconContentDescription="@string/show_password"
                app:errorIconDrawable="@null"
                app:helperText=" "
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
                tools:alpha="100">

                <com.submission.soilink.view.customview.CustomEditTextView
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    app:errorEnabled="true"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:alpha="0"
                android:contentDescription="@string/reset_password_page"
                android:text="@string/reset_password_page"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
                tools:alpha="100" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:alpha="0"
                android:contentDescription="@string/login_button"
                android:text="@string/login"
                android:textSize="25sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@+id/haveAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
                app:layout_constraintVertical_bias="0.35"
                tools:alpha="100" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="380dp"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

            <LinearLayout
                android:id="@+id/haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guidelineBottom"
                tools:alpha="100">

                <TextView
                    android:id="@+id/signupPageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/question_have_account"
                    android:text="@string/question_have_account" />

                <TextView
                    android:id="@+id/signupPageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/tb_signup"
                    android:text="@string/to_page_signup"
                    android:textColor="@color/color_text_button"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="161dp"
                    tools:layout_editor_absoluteY="0dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>